[package]
name = "uwutalk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "3.0.2"
druid = { git = "https://github.com/linebender/druid.git", features = ["im", "image-all"] }
reqwest = "0.11.4"
kuchiki = "0.8.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uwuify = "0.2.2"
